[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-rca"
version = "0.1.0"
description = "Seeded incident analysis for Datadog monitors and logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dd-rca contributors" }]
dependencies = [
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[project.scripts]
dd-rca = "dd_rca.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_rca*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
